feat(build): 引入 BuildContext 统一管理空间上下文
- 新增 BuildContext 类，用于集中管理建造过程中的空间语义信息
- 添加 protectedZones 和 restrictToSelection 字段以支持安全区域和选区限制
- 修改 BuildContextResolver 以支持根据 restrictToSelection 参数解析上下文
- 更新 ToolPatchFilter 使用 BuildContext 替代直接访问工具状态
- 重构 OutlineRule、ProtectedZoneRule 和 SelectionOnlyRule 以依赖注入 BuildContext
- 在 ChatPanel 中记录并使用 PromptModeState 以确保上下文一致性
- 优化 ToolPanel 中选区尺寸计算逻辑，增强空值检查
- 清理冗余 import 并调整部分 UI 构建代码格式